# verifyScanKernel

./: .gitignore  CMakeLists.txt  README.md  kernel.cu  main.cpp  types.h
cmake/: gtest.cmake
